cmake_minimum_required(VERSION 3.21)
project(DA___2nd_Project)

set(CMAKE_CXX_STANDARD 17)

add_executable(DA___2nd_Project main.cpp src/Menu.cpp src/Menu.h src/FileReader.cpp src/FileReader.h src/Graph.cpp src/Graph.h src/VertexEdge.cpp src/VertexEdge.h src/Services.cpp src/Services.h src/MutablePriorityQueue.h)
